fix block extra margin at user profile

--- a/htdocs/sites/all/themes/mc_base/css/all.less
+++ b/htdocs/sites/all/themes/mc_base/css/all.less
@@ -3370,6 +3370,11 @@ body.page-user .view-my-groups ul {
         padding:0 !important;
         margin:0 20px !important;
     }
+
+    .quicktabs_tabpage .block-content{
+        margin: 0px !important;
+    }
+
     .user-profile #content {
         margin:0 !important;
     }
